# src/server/go/api.go
@@ -21,6 +21,7 @@ import (
 // The DefaultApiRouter implementation should parse necessary information from the http request,
 // pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
 type DefaultApiRouter interface { 
+	Modify(http.ResponseWriter, *http.Request)
 	Read(http.ResponseWriter, *http.Request)
 	Register(http.ResponseWriter, *http.Request)
 	Subscribe(http.ResponseWriter, *http.Request)
@@ -33,6 +34,7 @@ type DefaultApiRouter interface {
 // while the service implementation can be ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
 type DefaultApiServicer interface { 
+	Modify(context.Context, WriteRequest) (ImplResponse, error)
 	Read(context.Context, string) (ImplResponse, error)
 	Register(context.Context, RegisterRequest) (ImplResponse, error)
 	Subscribe(context.Context, SubscribeRequest) (ImplResponse, error)
